--- a/style.css
+++ b/style.css
@@ -103,4 +103,7 @@
   width: 300px;
   float: left;
 }
- 
+ .text {
+  font-size: 12px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ }
