--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
         left: 20%;
         color: white;
         font-size: 90px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
     .topnav {
@@ -70,6 +71,7 @@
         left: 60%;
         color: white;
         font-size: 90px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
   .column {
