--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@
 
     .centered {
         position: absolute;
-        top: 60%;
+        top: 50%;
         left: 20%;
-        color: white;
+        color: rgb(248, 248, 248);
         font-size: 90px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
@@ -34,6 +34,7 @@
     .topnav {
         background-color: #752F83;
         overflow: hidden;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
     }
 
     .topnav a {
@@ -67,7 +68,7 @@
     
     .centered2 {
         position: absolute;
-        top: 60%;
+        top: 50%;
         left: 60%;
         color: white;
         font-size: 90px;
@@ -109,3 +110,9 @@
   font-size: 12px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }
+ .text2 {
+  font-size: 12px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  float: left;
+ }
+
