--- a/style.css
+++ b/style.css
@@ -107,12 +107,18 @@
   float: left;
 }
  .text {
-  font-size: 12px;
+  font-size: 8px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  }
  .text2 {
   font-size: 12px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   float: left;
+ }
+
+ .text3 {
+  font-size: 8px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  float: right;
  }
 
